--- a/.github/workflows/appium.yml
+++ b/.github/workflows/appium.yml
@@ -26,8 +26,9 @@ jobs:
 
     - name: Install dependencies
       run: |
-        npm install
-        pip install -r requirements.txt
+        npm install -g appium       # installs Appium globally
+        npm install                 # installs project dependencies (including webdriverio)
+
 
     - name: Start Appium server
       shell: powershell
