--- a/.github/workflows/appium.yml
+++ b/.github/workflows/appium.yml
@@ -26,19 +26,28 @@ jobs:
 
     - name: Install dependencies
       run: |
-        npm install -g appium       # installs Appium globally
-        npm install                 # installs project dependencies (including webdriverio)
-
+        npm install -g appium       # Install Appium globally
+        npm install                 # Install project dependencies (e.g., WebdriverIO)
 
     - name: Start Appium server
-      shell: cmd
-      run: start /B appium
-
-    - name: Wait for Appium to start
       shell: powershell
-      run: Start-Sleep -Seconds 5
+      run: |
+        # Start Appium in a separate process
+        Start-Process appium
 
-
+        # Wait until Appium is ready on port 4723
+        $timeout = 60
+        $elapsed = 0
+        while (-not (Test-NetConnection -ComputerName 127.0.0.1 -Port 4723).TcpTestSucceeded) {
+          Write-Host "Waiting for Appium to start..."
+          Start-Sleep -Seconds 2
+          $elapsed += 2
+          if ($elapsed -ge $timeout) {
+            Write-Error "Appium did not start in $timeout seconds."
+            exit 1
+          }
+        }
+        Write-Host "Appium server is ready!"
 
     - name: Run tests
       run: node test_sample.js
