--- a/.github/workflows/appium.yml
+++ b/.github/workflows/appium.yml
@@ -27,6 +27,7 @@ jobs:
     - name: Install dependencies
       run: |
         npm install -g appium@3
+        npm install appium@3 --save
         npm install
 
     - name: Install Appium Windows Driver
